--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyBENVTYtp6UnlTVs8gmLomS1NNlJqK7-ww&libraries=places"></script>
   </body>
 </html>
