--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyBENVTYtp6UnlTVs8gmLomS1NNlJqK7-ww&libraries=places"></script>
+    <script src="https://apis.google.com/js/api:client.js"></script>
   </body>
 </html>
