--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyBENVTYtp6UnlTVs8gmLomS1NNlJqK7-ww&libraries=places"></script>
+    <script></script>
     <script src="https://apis.google.com/js/api:client.js"></script>
   </body>
 </html>
